--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.10.0",
     "typescript": "^5.3.0"
   },
@@ -24,6 +27,11 @@
     "dist"
   ],
   "dependencies": {
-    "joi": "^18.0.1"
+    "@grpc/grpc-js": "^1.14.1",
+    "@grpc/proto-loader": "^0.8.0",
+    "crypto-js": "^4.2.0",
+    "express": "^5.1.0",
+    "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
